DDF-2786 Fix issue with header and footer during zoom (#1684)
- Previously, the header and footer didn't take into account the current user's zoom.  Now they do.  Various updates to css to take this into account.
 - Simplified the header and footer templates.  Updated their regions to use replace element to simplify things further.  Added a tooltip in case the text is cut off.

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/slideout/slideout.less
@@ -45,3 +45,24 @@
        transform: translateX(-100%);
     }
 }
+
+body.has-header @{customElementNamespace}slideout {
+    > .slideout-content {
+        top: ~'calc(2*@{minimumLineSize} + 1.5rem)';
+        height: ~'calc(100% - 2*@{minimumLineSize} - 1.5rem)';
+    }
+}
+
+body.has-footer @{customElementNamespace}slideout {
+    > .slideout-content {
+        top: ~'calc(2*@{minimumLineSize})';
+        height: ~'calc(100% - 2*@{minimumLineSize} - 1.5rem)';
+    }
+}
+
+body.has-header.has-footer @{customElementNamespace}slideout {
+    > .slideout-content {
+        top: ~'calc(2*@{minimumLineSize} + 1.5rem)';
+        height: ~'calc(100% - 2*@{minimumLineSize} - 3rem)';
+    }
+}
