--- a/catalog/ui/catalog-ui-search/src/main/webapp/less/components/content.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/less/components/content.less
@@ -1,10 +1,10 @@
 body.has-header #content,
 body.has-footer #content {
-  height: ~'calc(100% - 20px)';
+  height: ~'calc(100% - 1.5rem)';
 }
 
 body.has-header.has-footer #content {
-  height: ~'calc(100% - 40px)';
+  height: ~'calc(100% - 3rem)';
 }
 
 #content {
