--- a/catalog/ui/catalog-ui-search/src/main/webapp/less/components/loading.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/less/components/loading.less
@@ -1,15 +1,21 @@
-.has-header,
+.has-header {
+  #loading {
+    height: ~'calc(100% - 1.5rem)';
+    top: 1.5rem;
+  }
+}
+
 .has-footer {
   #loading {
-    height: ~'calc(100% - 20px)';
-    top: 20px;
+    height: ~'calc(100% - 1.5rem)';
+    top: 0px;
   }
 }
 
 .has-header.has-footer {
   #loading {
-    height: ~'calc(100% - 40px)';
-    top: 20px;
+    height: ~'calc(100% - 3rem)';
+    top: 1.5rem;
   }
 }
 
